feat: Inclusao de novos cenarios

--- a/notebooks/optimization_of_PMedian_problem.ipynb
+++ b/notebooks/optimization_of_PMedian_problem.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
        "Vadavalli             13.6        0.0  "
       ]
      },
-     "execution_count": 257,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,16 +228,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Welcome to the CBC MILP Solver \n",
+      "Version: 2.10.3 \n",
+      "Build Date: Dec 15 2019 \n",
+      "\n",
+      "command line - /home/fabio/PycharmProjects/P-Median/env/lib/python3.12/site-packages/pulp/solverdir/cbc/linux/64/cbc /tmp/cc481defb04a41c48ff425696b3c9ae7-pulp.mps -sec 600 -ratio 0.0 -threads 1 -timeMode elapsed -branch -printingOptions all -solution /tmp/cc481defb04a41c48ff425696b3c9ae7-pulp.sol (default strategy 1)\n",
+      "At line 2 NAME          MODEL\n",
+      "At line 3 ROWS\n",
+      "At line 48 COLUMNS\n",
+      "At line 277 RHS\n",
+      "At line 321 BOUNDS\n",
+      "At line 364 ENDATA\n",
+      "Problem MODEL has 43 rows, 42 columns and 114 elements\n",
+      "Coin0008I MODEL read with 0 errors\n",
+      "seconds was changed from 1e+100 to 600\n",
+      "ratioGap was changed from 0 to 0\n",
+      "threads was changed from 0 to 1\n",
+      "Option for timeMode changed from cpu to elapsed\n",
+      "Continuous objective value is 25 - 0.00 seconds\n",
+      "Cgl0004I processed model has 43 rows, 42 columns (42 integer (42 of which binary)) and 114 elements\n",
+      "Cutoff increment increased from 1e-05 to 0.0999\n",
+      "Cbc0038I Initial state - 0 integers unsatisfied sum - 0\n",
+      "Cbc0038I Solution found of 25\n",
+      "Cbc0038I Before mini branch and bound, 42 integers at bound fixed and 0 continuous\n",
+      "Cbc0038I Mini branch and bound did not improve solution (0.00 seconds)\n",
+      "Cbc0038I After 0.00 seconds - Feasibility pump exiting with objective of 25 - took 0.00 seconds\n",
+      "Cbc0012I Integer solution of 25 found by feasibility pump after 0 iterations and 0 nodes (0.00 seconds)\n",
+      "Cbc0030I Thread 0 used 0 times,  waiting to start 5.9843063e-05, 0 cpu time, 0 locks, 0 locked, 0 waiting for locks\n",
+      "Cbc0030I Main thread 0 waiting for threads,  1 locks, 1.9073486e-06 locked, 0 waiting for locks\n",
+      "Cbc0001I Search completed - best objective 25, took 0 iterations and 0 nodes (0.00 seconds)\n",
+      "Cbc0035I Maximum depth 0, 0 variables fixed on reduced cost\n",
+      "Cuts at root node changed objective from 25 to 25\n",
+      "Probing was tried 0 times and created 0 cuts of which 0 were active after adding rounds of cuts (0.000 seconds)\n",
+      "Gomory was tried 0 times and created 0 cuts of which 0 were active after adding rounds of cuts (0.000 seconds)\n",
+      "Knapsack was tried 0 times and created 0 cuts of which 0 were active after adding rounds of cuts (0.000 seconds)\n",
+      "Clique was tried 0 times and created 0 cuts of which 0 were active after adding rounds of cuts (0.000 seconds)\n",
+      "MixedIntegerRounding2 was tried 0 times and created 0 cuts of which 0 were active after adding rounds of cuts (0.000 seconds)\n",
+      "FlowCover was tried 0 times and created 0 cuts of which 0 were active after adding rounds of cuts (0.000 seconds)\n",
+      "TwoMirCuts was tried 0 times and created 0 cuts of which 0 were active after adding rounds of cuts (0.000 seconds)\n",
+      "ZeroHalf was tried 0 times and created 0 cuts of which 0 were active after adding rounds of cuts (0.000 seconds)\n",
+      "\n",
+      "Result - Optimal solution found\n",
+      "\n",
+      "Objective value:                25.00000000\n",
+      "Enumerated nodes:               0\n",
+      "Total iterations:               0\n",
+      "Time (CPU seconds):             0.00\n",
+      "Time (Wallclock seconds):       0.00\n",
+      "\n",
+      "Option for printingOptions changed from normal to all\n",
+      "Total time (CPU seconds):       0.00   (Wallclock seconds):       0.00\n",
+      "\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "1"
       ]
      },
-     "execution_count": 263,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -488,7 +545,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
